<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BlueBus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quick_launch">QuickLaunchActivity</string>
    <string name="quick_launch">Quick Launch</string>
    <string name="im_label">IM Building</string>
    <string name="union_label">Michigan Union</string>
    <string name="cc_label">C.C. Little</string>
    <string name="couzens_label">Couzens</string>
    <string name="markley_label">Markley</string>
    <string name="pierpont_label">Pierpont</string>
    <string name="bursley_label">Bursley</string>
    <string name="title_activity_bus_schedule">BusScheduleActivity</string>

    <string name="instruction_label">Select a bus stop</string>
    <string name="go_blue">Go Blue!</string>
</resources>
